# fire

./: .TESTenv  .env  Cargo.toml  Dockerfile  SETUP.sh  docker-compose.yml
migrations/2023-05-08-142829_movies/: down.sql  up.sql
migrations/2023-05-08-142843_tvshows/: down.sql  up.sql
src/: config.yaml  main.rs  movies.rs  server.rs  setup.rs  tvshows.rs
src/movies/: action.rs  arnold.rs  brucewillis.rs  cartoons.rs  comedy.rs  documentary.rs  drama.rs  fantasy.rs  godzilla.rs  harrypotter.rs  indianajones.rs  jamesbond.rs  johnwayne.rs  johnwick.rs  jurassicpark.rs  kingsmen.rs  meninblack.rs  misc.rs  nicolascage.rs  pirates.rs  riddick.rs  scifi.rs  startreck.rs  startrek.rs  starwars.rs  superheros.rs  therock.rs  tomcruize.rs  transformers.rs  tremors.rs  xmen.rs
src/server/: action.rs  arnold.rs  brucewillis.rs  cartoons.rs  comedy.rs  documentary.rs  drama.rs  fantasy.rs  indianajones.rs  server_functions.rs
src/setup/: fire_clean.rs  fire_create_dirs.rs  fire_env_vars.rs  fire_image.rs  fire_misc.rs  fire_mp3_info.rs  fire_process_movie_images.rs  fire_process_movies.rs  fire_process_music.rs  fire_process_music_images.rs  fire_process_tvshows.rs  fire_split.rs  fire_utils.rs  fire_walk_dirs.rs
src/tvshows/: alienworlds.rs  alteredcarbon.rs  andor.rs  badbatch.rs  blackknight.rs  bobafett.rs  bobbafett.rs  cowboybebop.rs  discovery.rs  enterprise.rs  forallmankind.rs  foundations.rs  halo.rs  hford1923.rs  houseofthedragon.rs  lostinspace.rs  lowerdecks.rs  mandalorian.rs  nextgeneration.rs  nightsky.rs  obiwan.rs  orville.rs  picard.rs  prodigy.rs  (+11 more)
