[package]
name = "firecore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
walkdir = "2.3.2"
simple-home-dir = "0.1.2"
image = "0.24.5"
json = "0.12.4"
md-5 = "0.10.5"
byte-unit = "4.0.18"
flate2 = "1.0.25"
filesize = "0.2.0"
tar = "0.4.38"
threadpool = "1.8.1"
num_cpus = "1.15.0"
id3 = "1.7.0"
mp3-duration = "0.1.10"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"