[package]
name = "firecore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
walkdir = "2.3.2"
simple-home-dir = "0.1.2"
image = "0.24.5"
md-5 = "0.10.5"
byte-unit = "4.0.18"
filesize = "0.2.0"
threadpool = "1.8.1"
num_cpus = "1.15.0"
id3 = "1.7.0"
mp3-duration = "0.1.10"
dotenvy = "0.15"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
rusqlite = { version = "0.29.0", features = ["bundled"] }
actix-web = "4"
actix-files = "0.6.2"
anyhow = "1.0.71"
